Comment out jQuery CDN

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,8 @@
 <head>
 	<title>Workout Log</title>
 	<link rel="stylesheet" href="workout-Style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-
+<!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+-->
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 	
 	<p></p>
 		<label for="wReps">Reps:</label>
-		<input type="number" name="wReps" id="wRep"/>
+		<input type="number" name="wReps" id="wReps"/>
 
 	<p></p>
 		<label for="wWeight">Weight:</label>
@@ -31,8 +31,8 @@
 		<input type="date" name="wDate" id="wDate"/>
 	<p></p>
 		<label for="wlbs">Pounds?</label>
-		<input type="radio" name="wlbs" value="Yes"/>Yes
-		<input type="radio" name="wlbs"  value="No"/>No<br>
+		<input type="radio" name="wlbs" id="wlbs" value="Yes"/>Yes
+		<input type="radio" name="wlbs" id="wkgs" value="No"/>No<br>
 	<p></p>
 		<input type="submit" id="wSubmit"/>
 	</fieldset>	
