Added workout log table elements

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,27 @@
 		<input type="radio" name="wlbs" id="wkgs" value="No"/>No<br>
 	<p></p>
 		<input type="submit" id="wSubmit"/>
-	</fieldset>	
+	</fieldset>
+<p></p>
+</div>
+<p></p>
+<div id="results">
+	<h3> The current workout log: </h3>
+	<table id="tableLog">
+		<thead>
+		<tr>
+		<th>Workout Name</th>
+		<th>Workout Reps</th>
+		<th>Workout Weight</th>
+		<th>Workout Date</th>
+		<th>Workout Unit</th>
+		<th>Click to Edit/Delete Workout</th>
+		</tr>
+		</thead>
+		
+
+	</table>
+	</div>	
 
 
 	
