added edit button functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Workout Log</title>
 	<link rel="stylesheet" href="workout-Style.css">
+
 <!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 -->
 </head>
@@ -10,6 +11,7 @@
 <body>
 <div id="intro">
 <h1> Welcome to the workout tracker! </h1>
+<p></p>
 </div>
 
 <div id="forms">
@@ -55,10 +57,12 @@
 		
 
 	</table>
+	</p></p>
 	</div>	
+<span id="editForm">
 
 
-	
+</span>
 <h1> mySQL table data: </h1>
 	{{results}}
 
